fix: use Arrays.asList to avoid NPE on unassigned task comments
- Replace List.of with Arrays.asList in NotificationService since List.of throws NPE on null elements, which crashed comment notifications with a 500 whenever the task had no assignee (the default state for newly created tasks)
- Add ProjectPermissionMatrixTest, a parameterized integration test covering every project-scoped endpoint against all four project roles plus non-member and anonymous access, to guard against silently missing requireMembership/requireRole checks